--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.2.0",
+    "@nestjs/config": "^1.1.1",
     "@nestjs/core": "^8.2.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.0",
     "@nestjs/swagger": "^5.1.4",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/passport-local": "^1.0.34",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
